--- a/page.html
+++ b/page.html
@@ -2,17 +2,30 @@
 <html>
 <head>
     <title>CPC-CV</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Côme Plantin-Carrenard</h1>
-    <p><em style="font-style: italic; font-family: Arial;">Je suis un étudiant passionné d'informatique et d'électronique à l'Ecam. Je suis très autodidacte et je me perds souvent dans des projets personnels (Simulateurs, neural networks et autres). Je suis quelqu'un de manuel, "touche à tout", j'ai par exemple construit une arcade.</em></p>
+    <h1 class="titre">Côme Plantin-Carrenard</h1>
+    <p class="italic-text">Je suis un étudiant passionné d'informatique et d'électronique à l'Ecam. Je suis très autodidacte et je me perds souvent dans des projets personnels (Simulateurs, neural networks et autres). Je suis quelqu'un de manuel, "touche à tout", j'ai par exemple construit une arcade.</p>
 
-    <p>HILTON</p>
-    <p>Jai dabord travaillé en tant que serveur chez Hilton à Prague. Cétait une très bonne expérience et jai beaucoup appris sur le monde du travail. J'ai acquis des compétences en management et en gestion du stress.</p>
+    <p class="normal-text">HILTON</p>
+    <p class="normal-text">Jai dabord travaillé en tant que serveur chez Hilton à Prague. Cétait une très bonne expérience et jai beaucoup appris sur le monde du travail. J'ai acquis des compétences en management et en gestion du stress.</p>
 
-    <p>ECAM ENGINEERING CONSULT</p>
-    <p>J'ai eu l'occasion d'être consultant dans une junior entreprise (élaboration d'un site internet). Nous avons beaucoup appris sur le métier d'ingénieur informatique et le travail en équipe.</p>
+    <p class="normal-text">ECAM ENGINEERING CONSULT</p>
+    <p class="normal-text">J'ai eu l'occasion d'être consultant dans une junior entreprise (élaboration d'un site internet). Nous avons beaucoup appris sur le métier d'ingénieur informatique et le travail en équipe.</p>
 
-    
+    <div class="competences">
+        <h2>Mes compétences</h2>
+        <ul>
+            <li>Java</li>
+            <li>Python</li>
+            <li>C sharp</li>
+            <li>Anglais parfait</li>
+            <li>Teamwork</li>
+            <li>Super intelligent</li>
+        </ul>
+    </div>
+
+
 </body>
 </html>
