rajout de formation

--- a/page.html
+++ b/page.html
@@ -26,6 +26,19 @@
         </ul>
     </div>
 
+    <div class="formation">
+        <h2>Formation jeunesse</h2>
+        <p class="normal-text">CCRO</p>
+        <p class="normal-text">Année de début: 2012</p>
+        <p class="normal-text">Année de fin: 2019</p>
+        <p class="normal-text">Diplôme obtenu: général</p>
+        <h2>Formation superieure</h2>
+        <p class="normal-text">ECAM</p>
+        <p class="normal-text">Année de début: 2022</p>
+        <p class="normal-text">Année de fin: On sait pas</p>
+        <p class="normal-text">Diplôme obtenu: Noon pas encore</p>
+    </div>
+
 
 </body>
 </html>
