added img and mofied style elements

--- a/page.html
+++ b/page.html
@@ -4,16 +4,17 @@
     <title>CPC-CV</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body class="background-image">
     <h1 class="titre">Côme Plantin-Carrenard</h1>
     <p class="italic-text">Je suis un étudiant passionné d'informatique et d'électronique à l'Ecam. Je suis très autodidacte et je me perds souvent dans des projets personnels (Simulateurs, neural networks et autres). Je suis quelqu'un de manuel, "touche à tout", j'ai par exemple construit une arcade.</p>
+    <div class="experience">
+        <h2>MOn experience</h2>
+        <p class="normal-text">HILTON</p>
+        <p class="normal-text">Jai dabord travaillé en tant que serveur chez Hilton à Prague. Cétait une très bonne expérience et jai beaucoup appris sur le monde du travail. J'ai acquis des compétences en management et en gestion du stress.</p>
 
-    <p class="normal-text">HILTON</p>
-    <p class="normal-text">Jai dabord travaillé en tant que serveur chez Hilton à Prague. Cétait une très bonne expérience et jai beaucoup appris sur le monde du travail. J'ai acquis des compétences en management et en gestion du stress.</p>
-
-    <p class="normal-text">ECAM ENGINEERING CONSULT</p>
-    <p class="normal-text">J'ai eu l'occasion d'être consultant dans une junior entreprise (élaboration d'un site internet). Nous avons beaucoup appris sur le métier d'ingénieur informatique et le travail en équipe.</p>
-
+        <p class="normal-text">ECAM ENGINEERING CONSULT</p>
+        <p class="normal-text">J'ai eu l'occasion d'être consultant dans une junior entreprise (élaboration d'un site internet). Nous avons beaucoup appris sur le métier d'ingénieur informatique et le travail en équipe.</p>
+    </div>
     <div class="competences">
         <h2>Mes compétences</h2>
         <ul>
