--- a/page.html
+++ b/page.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="background-image">
+    <div class="bloc-rouge"></div>
     <h1 class="titre">Côme Plantin-Carrenard</h1>
     <p class="italic-text">Je suis un étudiant passionné d'informatique et d'électronique à l'Ecam. Je suis très autodidacte et je me perds souvent dans des projets personnels (Simulateurs, neural networks et autres). Je suis quelqu'un de manuel, "touche à tout", j'ai par exemple construit une arcade.</p>
     <div class="experience">
